@@ -5,6 +5,7 @@ import com.lab.library.repository.BookRepository;
 import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 public class BookService {
 
@@ -55,7 +56,7 @@ public class BookService {
         }
         return repository.findAll().stream()
                 .filter(b -> b.getTitle().toLowerCase().contains(query.toLowerCase()))
-                .toList();
+                .collect(Collectors.toList());
     }
 
 
